cmake_minimum_required(VERSION 4.1)
project(AdventOfCode2025 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_GENERATOR "Ninja")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(GTest REQUIRED)
enable_testing()
add_executable(AdventOfCode2025 01.cc)
target_link_libraries(AdventOfCode2025 GTest::gtest_main)
add_test(NAME AdventOfCode2025 COMMAND test_01)
